# C-Solar-Sim

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  IMPORTANT_INSTRUCTIONS.md  LICENSE  README.md  explorer.html  journal.md  test_state_verification.csv
.github/workflows/: windows_release.yml
.jules/: architect.md  bolt.md  bughunter.md  debugger.md  palette.md  plan_verification  pruner.md  scribe.md  verifier.md
data/: system.csv
include/: Body.hpp  Camera3D.hpp  ConfigLoader.hpp  ConsoleRenderer.hpp  Constants.hpp  DataExporter.hpp  EphemerisLoader.hpp  GraphicsEngine.hpp  GuiEngine.hpp  HistoryManager.hpp  KeplerianSolver.hpp  Octree.hpp  OrbitCalculator.hpp  PhysicsEngine.hpp  ShaderProgram.hpp  SphereRenderer.hpp  StateManager.hpp  SystemData.hpp  Theme.hpp  Validator.hpp  Vector3.hpp  glad.h
shaders/: planet.frag  planet.vert  sun.frag  trail.vert
src/: benchmark.cpp  glad.cpp  main.cpp
tests/: check_moons.cpp  repro_camera_jitter.cpp  verify_features.cpp
